
1999.6.9
  * added GtkBase.Object.get_id and GObj.gtkobj#get_id to get an
    unique identifier to gtk objects. Nice for hash-tables, etc...
  * GUtil.memo is such an hash-table, allowing you to recover an
    object's wrapper.
  * added a show option to all classes, commanding whether the widget
    should be shown immediately.  It is by default true on all widgets
    except in module GWindow.

1999.6.8
  * updated olabl.patch

1999.6.7
  * split gtk.ml into gtk*.ml

1999.6.5
  * grouped Container focus operations in a "focus" subwidget

1999.6.4
  * slightly reorganized widget grouping

1999.6.3
  * disabled gtk_caller
  * subtle hack to have GTree get the right interface
  * switched completely to the new widget scheme (including examples)
  * added olabl.patch to apply to olabl-2.02 to compile new sources

1999.6.2
  * integrated changes from Hubert in Gtk, GtkObj and testgtk.ml
  * added G* modules to replace GtkObj. "make lablgtk2" for it

1999.6.1
  * added experimental GtkMenu for a cleaner approach to OO (Jacques)

1999.5.31
  * GtkObj: list, tree and menu_shell inherit from item_container (Jacques)
  * Argv.get_{string,pointer,object} may raise Null_pointer (Jacques)
  * Support for creating new widgets (Hubert)

1999.5.28
  * a few stylistic corrections
  * added Packer in gtk.ml

1999.5.27
  * new Gtk.Main.main Gtk.Main.quit and GtkThread.main (for modal windows)
  * added x: and y: to Window.setter
  * new methods: object#get_type widget#misc#lock_accelerators
    widget#misc#visible widget#misc#parent container#set_focus#vadjustment
    container#set_focus#hadjustment (could be container#set_focus#adjustment with a dir param)
    window#set_modal window#set_position window#set_default_size
    window#set_transient_for
    menu#set_accel_group
  * new classes: handle_box_skel handle_box_signals handle_box
    bbox color_selection color_selection_dialog toolbar
    and the corresponding modules in gtk.ml